[package]
name = "kongg_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
# sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls", "migrate", "chrono", "time"] }
surrealdb = { version = "2.3.1", features = ["kv-surrealkv"] }
# time = "0.3.39"
# tokio = { version = "1.44.0", features = ["rt", "macros"] }
